<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/hint_products_id"
        android:id="@+id/etRewProductsId"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/hint_new_products_name"
        android:id="@+id/etRewProductsName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/hint_new_products_price"
        android:inputType="numberDecimal"
        android:id="@+id/etRewProductsPrice"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:id="@+id/btnOkRewrite"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="15sp"
            android:layout_width="215dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:src="@drawable/rewrite" />
    </LinearLayout>

</LinearLayout>