<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:background="@color/colorProductsBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/choose"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/colorChooseAction"
            android:fontFamily="serif-monospace"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/products"
            android:id="@+id/btnChooseProducts"/>
        <Button
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clients"
            android:id="@+id/btnChooseClients"/>
    </LinearLayout>

</LinearLayout>