<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@color/colorProductsBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/products_action"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:textColor="@color/colorChooseAction"
            android:fontFamily="serif-monospace"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/products_btn_see_all"
            android:layout_weight="1"
            android:id="@+id/btn_products_see_all"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/products_btn_rewrite"
            android:id="@+id/btn_products_rewrite"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/products_btn_add"
            android:id="@+id/btn_products_add"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/products_id_list_view"/>
        <!--<ListView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/products_name"-->
            <!--android:layout_weight="2">-->
        <!--</ListView>-->
        <!--<ListView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/products_price"-->
            <!--android:layout_weight="2">-->
        <!--</ListView>-->
    </LinearLayout>

</LinearLayout>